--- a/final/public/stylesheets/viewJobs.css
+++ b/final/public/stylesheets/viewJobs.css
@@ -4,11 +4,42 @@
   align-items: center;
 }
 
+#controls {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#controls h1 {
+  margin-right: 50px;
+  font-size: 4ch;
+}
+
+#controls label {
+  font-size: 3ch;
+}
+
+#controls input {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+#jobsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* margin: auto; */
+  /* margin-left: 10px; */
+}
+
 
 
 
 .jobContainer img {
-  height: 75px;
+  height: 60px;
   background-color: var(--color-5);
   justify-self: center;
   margin: 10px;
@@ -23,9 +54,12 @@
   /* grid-template-rows: 30% 20% 20% 20%; */
   grid-template-columns: 70% 30%;
   background-color: var(--color-2);
-  width: 80%;
-  margin-top: 3vh;
+  width: 30%;
+  margin-top: 1vh;
   border: solid 3px var(--color-1);
+  margin-left: 10px;
+  margin-right: 5px;
+  border-radius: 5px;
 }
 
 .jobContainer a {
@@ -33,12 +67,11 @@
   text-decoration: none;
   cursor: pointer;
   color: var(--color-5);
-  text-align: right;
+  text-align: center;
   align-self: center;
 }
 
 .jobContainer p {
-  font-size: 4ch;
   color: var(--color-5);
   font-weight: bold;
   text-align: center;
@@ -51,22 +84,24 @@
 
 .jobName {
   grid-row: 1;
-  grid-column: 1;
+  grid-column: 1 /span 2;
+  font-size: 3.5ch !important;
 }
 
 .jobClient {
-  grid-row: 1;
-  grid-column: 2;
+  grid-row: 2;
+  grid-column: 1 /span 2;
   font-weight: normal !important;
+  font-size: 3ch !important;
 }
 
 .addProduction {
-  grid-row: 2;
+  grid-row: 3;
   grid-column: 1;
 }
 
 .addProductionContainer {
-  grid-row: 2;
+  grid-row: 3;
   grid-column: 2;
   position: relative;
   display: inline-block;
@@ -104,7 +139,7 @@
 }
 
 .addProductionIcon {
-  height: 75px;
+  height: 60px;
   background-color: var(--color-5);
   margin: 10px;
   border-radius: 25%;
@@ -114,16 +149,6 @@
   margin-bottom: 10px !important;
 }
 
-.viewProduction {
-  grid-row: 3;
-  grid-column: 1;
-}
-
-.viewProductionIcon {
-  grid-row: 3;
-  grid-column: 2;
-}
-
 .viewTickets {
   grid-row: 4;
   grid-column: 1;
@@ -131,5 +156,15 @@
 
 .viewTicketsIcon {
   grid-row: 4;
+  grid-column: 2;
+}
+
+.downloadPrints {
+  grid-row: 5;
+  grid-column: 1;
+}
+
+.downloadPrintsIcon {
+  grid-row: 5;
   grid-column: 2;
 }
