gotta redo the whole select thing and make a custom select listbox because mobile sucks!!!!

--- a/final/views/adminPage.pug
+++ b/final/views/adminPage.pug
@@ -8,10 +8,11 @@ block content
   h1 Admin Page
   div#controls
     select(name="crewSelect", id="crewSelect", size="12", onchange="window.formatJobs()")
-    select(name="jobSelect", id="jobSelect", size="12")
+    div#jobButtons
+      button(id="addJobButton") Add Job
+      button(id="removeJobButton") Remove Job
 
-    button(id="addJobButton") Add Job
-    button(id="removeJobButton") Remove Job
+    div#availableJobs
     
 
 block scripts
