--- a/final/public/stylesheets/adminPage.css
+++ b/final/public/stylesheets/adminPage.css
@@ -7,3 +7,60 @@
 .assignedOption {
   background-color: lightgreen;
 }
+
+#controls {
+  display: grid;
+  justify-content: center;
+}
+
+#controls select {
+  font-size: 4ch;
+}
+
+#availableJobs {
+  grid-row: 2;
+  grid-column: 1 /span 2;
+  background-color: white;
+  border: 1px solid black;
+}
+
+#availableJobs p {
+  text-align: center;
+  font-size: 3.5ch;
+  margin: 0px;
+  cursor: default;
+  padding: 3px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+.assignedJob {
+  background-color: lightgreen;
+}
+
+.selectedJob {
+  border: 2px dashed black;
+}
+
+#crewSelect {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+#jobButtons {
+  grid-row: 1;
+  grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+#jobButtons button {
+  font-size: 3ch;
+  margin: 10px;
+}
+
+#addJobButton {}
+
+#removeJobButton {}
