pageAdmin logic now working as expected with new p instead of option

--- a/final/views/adminPage.pug
+++ b/final/views/adminPage.pug
@@ -7,7 +7,7 @@ block style
 block content
   h1 Admin Page
   div#controls
-    select(name="crewSelect", id="crewSelect", size="12", onchange="window.formatJobs()")
+    select(name="crewSelect", id="crewSelect", onchange="window.formatJobs()")
     div#jobButtons
       button(id="addJobButton") Add Job
       button(id="removeJobButton") Remove Job
