--- a/final/public/stylesheets/adminPage.css
+++ b/final/public/stylesheets/adminPage.css
@@ -11,6 +11,8 @@
 #controls {
   display: grid;
   justify-content: center;
+  grid-template-columns: 50% 50%;
+  width: 80%;
 }
 
 #controls select {
@@ -22,6 +24,9 @@
   grid-column: 1 /span 2;
   background-color: white;
   border: 1px solid black;
+  width: 80%;
+  justify-self: center;
+  margin-top: 3vh;
 }
 
 #availableJobs p {
@@ -46,6 +51,10 @@
 #crewSelect {
   grid-row: 1;
   grid-column: 1;
+  background-color: lightgray;
+  width: 65%;
+  text-align: center;
+  justify-self: center;
 }
 
 #jobButtons {
@@ -57,10 +66,18 @@
 }
 
 #jobButtons button {
-  font-size: 3ch;
+  font-size: 3.5ch;
   margin: 10px;
+  width: 75%;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
 }
 
-#addJobButton {}
+#addJobButton {
+  background-color: green;
+}
 
-#removeJobButton {}
+#removeJobButton {
+  background-color: red;
+}
