--- a/final/public/stylesheets/viewProduction.css
+++ b/final/public/stylesheets/viewProduction.css
@@ -76,3 +76,54 @@
   grid-row: 3;
   grid-column: 4;
 }
+
+#productionTable {
+  border-collapse: collapse;
+  margin: auto;
+  width: 80%;
+}
+
+#productionTable td,
+th {
+  border: 1px solid #999;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+#productionTable tr {}
+
+#productionTable td {
+  background-color: var(--color-3);
+  font-size: 2.5ch;
+}
+
+#productionTable th {
+  background-color: var(--color-2);
+  color: var(--color-5);
+  font-size: 3ch;
+}
+
+.headerElement {
+  display: grid;
+  margin: auto;
+  grid-template-columns: 1fr 1fr;
+}
+
+#productionHeaders {
+  margin: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.billingCodeHeader {
+  font-size: 3ch;
+  margin: 0;
+  grid-column: 1;
+}
+
+.qtyHeader {
+  margin: 0;
+  font-size: 3ch;
+  grid-column: 2;
+  text-align: right;
+}
