hide show vaults working

--- a/final/views/viewProduction.pug
+++ b/final/views/viewProduction.pug
@@ -19,7 +19,7 @@ block content
     label(for="endDate", id="endDateLabel") End
     label(for="jobSelect", id="jobSelectLabel") Filter by Job
     label(for="billingCodeSelect", id="billingCodeSelectLabel") Filter by Code
-    label(for="vaultCheckbox", id="vaultCheckboxLabel") Show Vaults
+    label(for="vaultCheckbox", id="vaultCheckboxLabel") Hide Vaults
     label(for="clientSelect", id="clientSelectLabel") Filter by Client
 
   div#productionHeaders
