--- a/final/public/stylesheets/viewProduction.css
+++ b/final/public/stylesheets/viewProduction.css
@@ -1,10 +1,28 @@
 #content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 #productionControls {
   display: grid;
+  width: 85%;
+}
+
+#productionControls input,
+select {
+  width: 80%;
+  margin: auto;
+}
+
+#productionControls label {
+  text-align: center;
+  margin-bottom: 4px;
+}
+
+#vaultCheckbox {
+  width: 20px;
+  height: 20px;
 }
 
 #startDate {
@@ -119,6 +137,8 @@ th {
   font-size: 3ch;
   margin: 0;
   grid-column: 1;
+  font-weight: bold;
+  margin-top: 1%;
 }
 
 .qtyHeader {
