fixed broken forward /backward ubttons in inputproduction

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -44,6 +44,7 @@ block content
 block scripts
   script.
     jobNamePug="#{jobName}"
+    clientPug="#{client}"
     pageNumberPug="#{pageNumber}"
     vaultsJSON="#{vaults}"
     boresAndRocksJSON="#{boresAndRocks}"
