added new forward/backward icons and now i think they actually look OK

--- a/final/public/stylesheets/inputProduction.css
+++ b/final/public/stylesheets/inputProduction.css
@@ -46,7 +46,8 @@
 }
 
 .movementArrow {
-  width: 70px;
+  width: 100px;
+  opacity: 75%;
   /* background-color: gray; */
   pointer-events: none;
   /* border-radius: 15px; */
