asBuilt now showing bores.. need to add clientoptions to correctly get colors. and also maybe modify bindPopup to show ID in this mode

--- a/final/public/stylesheets/adminPage.css
+++ b/final/public/stylesheets/adminPage.css
@@ -29,6 +29,17 @@
   margin-top: 3vh;
 }
 
+#asBuiltJobs {
+  grid-column: 1 /span 2;
+  justify-self: center;
+}
+
+#asBuiltJobs button {
+  font-size: 4ch;
+  border: none;
+  margin-left: 10px;
+}
+
 #availableJobs p {
   text-align: center;
   font-size: 3.5ch;
