--- a/final/views/adminPage.pug
+++ b/final/views/adminPage.pug
@@ -13,6 +13,12 @@ block content
       button(id="removeJobButton") Remove Job
 
     div#availableJobs
+
+
+    div#asBuiltJobs
+      h1 Generate As Built
+      select(name="jobSelect", id="jobSelect")
+      button(onclick="goToAsBuilt()") Start
     
 
 block scripts
