getTotals working.. need tweaking and styling

--- a/final/views/asBuilts.pug
+++ b/final/views/asBuilts.pug
@@ -13,7 +13,7 @@ block content
     label(id="endDateLabel", for="endDateInput") End Date
     button(onclick="window.filterByDate()")#filterByDateButton.controlChild Filter By Date
     button(onclick="window.generateBoreLabels()")#generateLabelsButton.controlChild Generate Bore Labels
-    button#generateTotalsButton.controlChild Generate Totals Popup
+    button(onclick="window.generateTotals()")#generateTotalsButton.controlChild Generate Totals Popup
     button(onclick="window.resetItems()")#resetButton.controlChild Reset
     h1(onclick="window.toggleControls()")#xButton.controlChild X
 
