--- a/final/views/asBuilts.pug
+++ b/final/views/asBuilts.pug
@@ -14,6 +14,9 @@ block content
     button(onclick="window.filterByDate()")#filterByDateButton.controlChild Filter By Date
     button(onclick="window.generateBoreLabels()")#generateLabelsButton.controlChild Generate Bore Labels
     button(onclick="window.generateTotals()")#generateTotalsButton.controlChild Generate Totals Popup
+    div#pageMovementContainer
+      button(onclick="window.goToPreviousPage()")#previousPageButton.controlChild << Prev 
+      button(onclick="window.goToNextPage()")#nextPageButton.controlChild Next >>
     button(onclick="window.resetItems()")#resetButton.controlChild Reset
     h1(onclick="window.toggleControls()")#xButton.controlChild X
 
