page movement links working, and now fixed bug where bores from all pages were showing on all apges

--- a/final/public/stylesheets/asBuilts.css
+++ b/final/public/stylesheets/asBuilts.css
@@ -226,6 +226,10 @@
   display: flex;
 }
 
+.activeLink {
+  background-color: green !important;
+}
+
 #pageMovementContainer button {
   width: 40% !important;
   font-size: 2.5ch;
