--- a/final/public/stylesheets/asBuilts.css
+++ b/final/public/stylesheets/asBuilts.css
@@ -230,6 +230,11 @@
   background-color: green !important;
 }
 
+.totalsDateHeader {
+  text-align: center;
+  margin: 0px;
+}
+
 #pageMovementContainer button {
   width: 40% !important;
   font-size: 2.5ch;
