we FINALLY found a way to serve a pdf file created by pdfkit in the browser.. now we need to fix up the code and coordinate everything proply... but that's huge

--- a/final/views/asBuilts.pug
+++ b/final/views/asBuilts.pug
@@ -17,6 +17,9 @@ block content
     div#pageMovementContainer
       button#previousPageButton.controlChild << Prev 
       button#nextPageButton.controlChild Next >>
+    div#boreLogsContainer
+      button#showBoreNumbersButton.controlChild Show Numbers
+      button(onclick="window.testRequest()")#downloadPDFButton.controlChild Download PDF
     button(onclick="window.resetItems()")#resetButton.controlChild Reset
     h1(onclick="window.toggleControls()")#xButton.controlChild X
 
