--- a/final/public/stylesheets/asBuilts.css
+++ b/final/public/stylesheets/asBuilts.css
@@ -218,7 +218,16 @@
 }
 
 #pageMovementContainer {
-  grid-row: 4 /span 2;
+  grid-row: 5;
+  grid-column: 1;
+  align-self: center;
+  justify-self: center;
+  width: 80%;
+  display: flex;
+}
+
+#boreLogsContainer {
+  grid-row: 4;
   grid-column: 1;
   align-self: center;
   justify-self: center;
