we are now downloading real bores from the database instead of test data

--- a/final/views/asBuilts.pug
+++ b/final/views/asBuilts.pug
@@ -18,7 +18,7 @@ block content
       button#previousPageButton.controlChild << Prev 
       button#nextPageButton.controlChild Next >>
     div#boreLogsContainer
-      button#showBoreNumbersButton.controlChild Show Numbers
+      button(onclick="window.sendPDFGenerationRequest()")#showBoreNumbersButton.controlChild Show Numbers
       button(onclick="window.testRequest()")#downloadPDFButton.controlChild Download PDF
     button(onclick="window.resetItems()")#resetButton.controlChild Reset
     h1(onclick="window.toggleControls()")#xButton.controlChild X
