--- a/final/public/stylesheets/asBuilts.css
+++ b/final/public/stylesheets/asBuilts.css
@@ -124,6 +124,10 @@
   display: none;
 }
 
+.boreIdPopup>.leaflet-popup-tip-container {
+  display: none;
+}
+
 .boreLabelPopup>.leaflet-popup-tip-container {
   display: none;
 }
@@ -131,6 +135,11 @@
 .totalsPopup>.leaflet-popup-content-wrapper>.leaflet-popup-content {
   margin: 0px !important;
   width: 10vw !important;
+}
+
+.boreIdPopup>.leaflet-popup-content-wrapper>.leaflet-popup-content {
+  margin: 0px !important;
+  width: fit-content !important;
 }
 
 .boreLabelPopup>.leaflet-popup-content-wrapper>.leaflet-popup-content {
@@ -145,9 +154,24 @@
   padding: 10px;
 }
 
+.boreIdPopup>.leaflet-popup-content-wrapper {
+  box-shadow: none;
+  border-radius: 0px;
+}
+
 .boreLabelPopup>.leaflet-popup-content-wrapper {
   box-shadow: none;
   border-radius: 0px;
+}
+
+.boreIdPopup {}
+
+.boreId {
+  font-size: 3ch;
+  font-weight: bold;
+  color: red;
+  padding: 3px;
+  margin: 0px !important;
 }
 
 .asBuiltFootage {
