server now sends CLIENT_NAME over to asBuilts

--- a/final/views/asBuilts.pug
+++ b/final/views/asBuilts.pug
@@ -30,6 +30,7 @@ block scripts
     VAULTS_JSON="#{vaultsJSON}"
     CLIENT_OPTIONS_JSON="#{clientOptionsJSON}"
     JOB_NAME_PUG="#{jobName}"
+    CLIENT_NAME_PUG="#{clientName}"
     PAGE_NUMBER_PUG="#{pageNumber}"
     PAGES_JSON="#{pagesJSON}"
     JOB_ID_PUG="#{jobId}"
