--- a/final/views/viewJobs.pug
+++ b/final/views/viewJobs.pug
@@ -24,7 +24,7 @@ block content
               a(href=`/inputProduction/${job.client}/${job.job_name}/${page}`).pageLink SH#{page}
         a(href=`/viewTickets/${job.job_name}`).viewTickets Tickets
         img(src="/images/icons/ticket.png").viewTicketsIcon
-        a(href="#").downloadPrints Prints
+        a(href=`/prints/${job.job_name}.pdf`).downloadPrints Prints
         img(src="/images/icons/download.png").downloadPrintsIcon
 
 
