got rid of useless rock stuff from inputProduction. less database calls

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -46,7 +46,7 @@ block scripts
     clientPug="#{client}"
     pageNumberPug="#{pageNumber}"
     vaultsJSON="#{vaults}"
-    boresAndRocksJSON="#{boresAndRocks}"
+    boresJSON="#{bores}"
     totalPagesForJobPug="#{totalPagesForJob}"
     clientOptionsJSON="#{clientOptions}"
 
